Closed Bug 1408010 Opened 8 years ago Closed 8 years ago

Fallback to app chooser dialog when external protocol handler app not found

Categories

(Firefox :: File Handling, defect, P3)

defect

Tracking

()

RESOLVED FIXED
Firefox 58
Tracking Status
firefox57 --- wontfix
firefox58 --- fixed

People

(Reporter: jhorak, Assigned: jhorak)

Details

Attachments

(1 file)

Follow-up from https://bugzilla.mozilla.org/show_bug.cgi?id=1297686#c68 Steps to reproduce: 1. install external protocol handler application for magnet scheme (like Transmission) 2. try to open magnet: protocol (for example from: https://www.openoffice.org/distribution/p2p/magnet.html ) 3. pick the Transmission app as handler and check 'Remember my choice for magnet links' 4. uninstall Transmission app 5. try to open magnet link again Result: Error page is shown because handler app was not found Expected: Show user application chooser dialog in case the previously remembered application is not found.
Priority: -- → P3
Comment on attachment 8920087 [details] Bug 1408010 - Fallback to app chooser dialog when external handler app not found, https://reviewboard.mozilla.org/r/191092/#review197204 Thanks for the improvement! ::: commit-message-4494c:1 (Diff revision 1) > +Bug 1408010 - Fallback to app chooser dialog when external handler app not found, r?paolo.mozmail@amadzone.org nit: just r=paolo in the commit message
Attachment #8920087 - Flags: review?(paolo.mozmail) → review+
Keywords: checkin-needed
Assignee: nobody → jhorak
Pushed by ryanvm@gmail.com: https://hg.mozilla.org/integration/autoland/rev/9f6a982100e9 Fallback to app chooser dialog when external handler app not found, r=Paolo
Keywords: checkin-needed
Status: NEW → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → Firefox 58
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: