Bug 1408010 - Fallback to app chooser dialog when external handler app not found, r=Paolo

The nsExternalHelperAppService has been changed to ask for application in case
the preferred application has not been found (to cover the case the user has
uninstalled the application).

MozReview-Commit-ID: 63AFzPhzcxN

--HG--
extra : rebase_source : f91bdae686b062bade1cacdb489c935e30ea0876